--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.test.HowlFirebaseAuth.HomeActivity"
+    tools:context="com.test.HowlFirebaseAuth.Activity.HomeActivity"
     tools:showIn="@layout/app_bar_home"
     android:keepScreenOn="true"
     >
+
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -59,6 +61,6 @@
         android:layout_height="wrap_content"
         android:text="Upload"
         tools:layout_editor_absoluteX="148dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="14dp"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 </android.support.constraint.ConstraintLayout>
